assets/styles/index.scss
$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';

@import '~bootstrap-sass/assets/stylesheets/bootstrap';
@import url('https://fonts.googleapis.com/css?family=Varela+Round|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Noto+Sans:400,400i,700,700i|Alegreya+Sans:100,100i,300,300i,400,400i,500,500i,700,700i,800,800i,900,900i|Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');

/* Color Mixes */

$five-percent-gray: #f2f2f2;
$six-percent-gray: #f0f0f0;
$ten-percent-gray: #e5e5e5;
$thirty-percent-gray: #b3b3b3;
$fifty-percent-gray: #7f7f7f;
$seventy-five-percent-gray: #636466;
$black: #000;
$white: #fff;
$red-muted: rgba(246, 65, 84, 1);
$green-muted: rgba(119, 210, 131, 1);
$blue-muted: rgba(112, 115, 255, 1);
$yellow-muted: rgba(255, 230, 100, 1);
$orange-muted: rgba(255, 150, 0, 1);
$rainbow-red: #f27089;
$rainbow-orange: #fca778;
$rainbow-yellow: #fbde84;
$rainbow-green: #9ac479;
$rainbow-blue: #74a6cf;
$grass-green: #b8d77d;
$sky-blue: #a7c5df;
$cloud-white: #f7f0e3;
$lines-brown: #3a2328;
$stem-green: #358d65;
$black-screen: rgba(0, 0, 0, 0.9);

/* Styles */

html,
body {
  width: 100%;
  height: 100%;
  background-color: $blue-muted;
  text-align: center;
  font-family: 'Alegreya Sans', sans-serif;
  font-size: 16px;
  font-weight: 300;
}

nav {
  width: 100%;
  position: fixed;
  z-index: 10;
  display: flex;
  justify-content: flex-end;
  padding: 5px 1vw;
  background-color: $rainbow-yellow;
}

nav a {
  margin: auto 11px;
  color: $blue-muted;
  font-family: 'Varela Round', sans-serif;
  letter-spacing: 0.25vw;
  text-transform: uppercase;

  &:hover {
    color: $rainbow-red;
  }
}

main,
footer {
  position: relative;
  bottom: 16px;
  background-color: $black;
}

.tree {
  margin-top: 65px;
}

.banner-01 {
  height: 250px;
  background-image: url('../../public/images/thibodeau_green_tile.jpg');
}

.banner-02 {
  height: 200px;
  background-image: url('../../public/images/thibodeau_cool_tile.jpg');
}

.banner-03 {
  height: 200px;
  background-image: url('../../public/images/thibodeau_sunny_tile.jpg');
}

.banner-04 {
  height: 200px;
  background-image: url('../../public/images/thibodeau_green_tile.jpg');
}

.name-and-occupations {
  margin: 25px auto;
  text-transform: uppercase;
}

.name {
  color: $white;
  font-size: 3.75rem;
  letter-spacing: 1.75vw;
}

.occupations {
  display: flex;
  justify-content: center;
  color: $rainbow-yellow;
  font-size: 1.625rem;
  letter-spacing: 1.125vw;
}

.headshot-img {
  border: 4px solid $fifty-percent-gray;
  border-radius: 50%;
}

.text-link {
  color: $rainbow-yellow;

  &:link,
  &:visited,
  &:hover,
  &:focus,
  &:active {
    color: $rainbow-yellow;
  }
}

.paragraph-title {
  width: 70%;
  margin: 24px auto 10px;
  text-align: center;
  text-transform: uppercase;
  color: $white;
  font-family: 'Alegreya Sans', sans-serif;
  font-size: 2rem;
  letter-spacing: 0.5vw;
}

p {
  width: 60%;
  margin: 0 auto 32px;
  color: $white;
  font-family: 'Roboto', sans-serif;
  font-size: 1.5rem;
  text-align: left;
}

.projects {
  width: 80%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  padding-bottom: 32px;
  margin: 0 auto;
}

.project-box {
  display: inline;
  margin: 10px 20px 20px;
}

.project-box a {
  display: inline-block; // Override anchor element default of inline -- to resize
}

.project-info {
  width: 240px;
  max-width: 100%;
  height: 429px;
  position: absolute;
  z-index: 3;
  display: hidden;
  padding: 32px 32px 48px 44px;
  border: 1px solid transparent;
  border-radius: 16px;
  margin: 0 auto;
  color: transparent;
  user-select: none;
}

.project-info:hover {
  display: block;
  border-color: $rainbow-blue;
  background-color: $black-screen;
  color: $white;

  .project-info-heading {
    margin: 0 auto;
    color: $rainbow-blue;
    font-size: 1.125rem;
    font-weight: 500;
    letter-spacing: 0.5vw;
    text-transform: uppercase;
  }

  .project-info-text {
    margin: 8px auto;
    color: $white;
    font-family: 'Roboto', sans-serif;
    line-height: 1.5rem;
    text-align: left;

    .front-end {
      color: $rainbow-orange;
    }

    .back-end {
      color: $rainbow-green;
    }
  }
}

.project-img {
  width: 240px;
  max-width: 100%;
  height: 429px;
  border-radius: 16px;
}

.project-routing-buttons {
  margin-top: 16px;
}

.project-routing-buttons a {
  width: 70%;
  display: block;
  padding: 4px 12px;
  border: 1px solid $white;
  border-radius: 8px;
  margin: 12px auto;
  background-color: transparent;
  font-family: 'Varela Round', sans-serif;
  font-size: 0.75rem;
  letter-spacing: 0.25vw;
  text-transform: uppercase;
  text-decoration: none;

  &:nth-child(1) {
    border-color: $rainbow-blue;
  }

  &:nth-child(2) {
    border-color: $rainbow-orange;
  }

  &:nth-child(3) {
    border-color: $rainbow-green;
  }

  &:link,
  &:visited,
  &:active {
    color: $white;
  }

  &:hover {
    background-color: $white;
    color: $black;
  }
}

.contact-box {
  width: 85%;
  min-height: 120px;
  display: flex;
  justify-content: space-around;
  border: 1px solid $rainbow-red;
  border-radius: 16px;
  margin: 24px auto 0;
  padding: 16px 24px;
}

.contact-box a {
  display: inline-block;
  max-width: 100%;
  margin: 20px auto;

  &:hover .contact-text-link {
    text-decoration: underline;
  }
}

.contact-icon {
  margin: 0 auto;
}

.contact-text-link {
  display: block;
  font-family: 'Roboto', sans-serif;
  letter-spacing: 0.125rem;
  margin: 0 auto;
  text-align: center;
}

.endnotes {
  margin: 40px auto 0;
}

.ital {
  font-style: italic;
}

.credit {
  margin: 20px 0;
  text-align: center;
  color: $white;
  font-family: 'Roboto', sans-serif;
  letter-spacing: 0.25vw;
}

.closing-accent-box {
  height: 50px;
}

.closing-accent-box div {
  width: 100%;
  height: 3px;
  background-color: $orange-muted;

  &:nth-child(2) {
    background-color: $rainbow-blue;
  }

  &:nth-child(3) {
    background-color: $rainbow-green;
  }

  &:nth-child(4) {
    background-color: $rainbow-yellow;
  }

  &:nth-child(5) {
    background-color: $rainbow-green;
  }

  &:nth-child(6) {
    background-color: $rainbow-blue;
  }

  &:nth-child(7) {
    background-color: $orange-muted;
  }
}

/* Breakpoint 768px */

@media only screen and (max-width: 768px) {

  .name {
    font-size: 3.25rem;
  }

  .occupations {
    flex-direction: column;
  }

  .pipe {
    display: none;
  }

  p {
    width: 75%;
    letter-spacing: 0;
  }

  .contact-box {
    width: 240px;
    max-width: 240px;
    flex-direction: column;
    align-content: center;
    padding: 32px 0;
  }

  .contact-box  a {
    margin: 16px auto;
  }
}

/* Breakpoint 576px */

@media only screen and (max-width: 576px) {

  main,
  footer {
    bottom: 17px;
  }

  nav {
    justify-content: center;
  }

  .tree {
    width: 57%;
    height: 57%;
  }

  .banner-01 {
    height: 200px;
  }

  .banner-02,
  .banner-03,
  .banner-04 {
    height: 100px;
  }

  .name-and-occupations {
    margin: 16px auto;
  }

  .name {
    margin-top: 10px;
    font-size: 1.75rem;
  }

  .occupations {
    font-size: 1.25rem;
  }

  .paragraph-title {
    margin: 16px auto 8px;
    font-size: 1.25rem;
  }

  p {
    width: 85%;
    margin: 0 auto 16px;
    font-size: inherit;
  }

  .project-box {
    margin: 10px auto 20px;
  }

  .project-routing-buttons a {
    width: 95%;
  }

  .endnotes {
    margin: 20px auto 0;
  }
}

